# snapbpu

./: .dumont_token  .env.demo  .env.example  .env.test  .gitignore  ARCHITECTURE_VISUAL.txt  BACKEND_FIXES_VALIDATION_REPORT.md  BACKEND_TESTS_IMPLEMENTATION.md  CLI_MIGRATION_SUMMARY.md  COMPONENTES_RECOMENDADOS.md  DELIVERABLES.md  EXPANDED_TEST_SUITE_REPORT.md  FAILOVER_AD.md  FAILOVER_NOTIFICATION.md  FAILOVER_PERFORMANCE_REPORT.md  FAILOVER_SUMMARY.md  FASE1_IMPLEMENTADA.md  FASE2_IMPLEMENTADA.md  FASTAPI_MIGRATION_PLAN.md  FASTAPI_MIGRATION_STATUS.md  FASTAPI_QUICKSTART.md  GCLOUD_BACKUP_STATUS.md  GCP_CREDENTIALS_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  MASTER_PLAN_REGION_MAPPING.md  Makefile  OTIMIZACOES_FAILOVER.md  QA_REPORT_FINAL.md  QUICK_START_FAILOVER.md  README-backend-testes.md  README.md  REALTIME_SYNC.md  REGION_MAPPING_FIX.md  RELATORIO_NAVEGACAO_SISTEMA.md  SEMANA1_STATUS.md  SESSION_SUMMARY.md  SNAPSHOT_CONFIG.md  SNAPSHOT_OPTIMIZATION_SUMMARY.md  SNAPSHOT_PERFORMANCE.md  (+50 more)
.credentials/: README.md
Live-Doc/: server.py
cli/: .coverage  CLI_REFERENCE.md  COVERAGE_REPORT.md  README.md  SPRINT_TEST_CHECKLIST.md  __main__.py  benchmark_multi_gpu.json  benchmark_results.json  dumont_cli.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_report.html
cli/agents/: llm_agents.py  session_log_20251221_204439.json  session_log_20251221_204537.json  session_log_20251221_204609.json  session_log_20251221_204700.json
cli/agents/logs/: command_test_20251221_210043.json  command_test_20251221_210504.json  command_test_20251221_210946.json  session_20251221_205257.json  session_20251221_205606.json  session_20251221_211214.json  session_20251221_212304.json  session_20251221_212413.json  session_20251221_212510.json  session_20251221_213330.json  session_20251221_215258.json  session_20251221_215332.json  session_20251221_215659.json  session_20251221_220154.json  session_20251221_220507.json
cli/commands/: api.py  base.py  config.py  model.py  models.py  wizard.py
cli/docs/: NATURAL.md  README.md  SYSTEM.md
cli/dumont_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/scripts/: demo-natural.sh  demo-system.sh  demo.sh  help.sh  install.sh  setup-shortcuts.sh
cli/tests/: benchmark_direct.py  benchmark_journey_results.json  benchmark_multi_gpu.py  benchmark_serverless.py  conftest.py  economics_projection_results.json  mode_fast_results.json  mode_spot_results.json  mode_ultrafast_results.json  scaledown_economics.json  serverless_modes_benchmark.json  stop_start_cycle_tensordock_results.json  tensordock_cycles_results.json  test_all_endpoints_real.py  test_cli.py  test_cli_real.py  test_concurrent_gpu.py  test_e2e_complete.py  test_e2e_journeys.py  test_e2e_real_integration.py  test_failover_real.py  test_finetune_lifecycle.py  test_journeys_complete.py  test_journeys_e2e.py  test_models_deploy_e2e.py  test_models_real.py  test_real_e2e.py  test_real_integration.py  test_scaledown_economics.py  test_scaledown_real.py  test_serverless_benchmark.py  test_serverless_benchmark_journey.py  test_serverless_cli_complete.py  test_serverless_e2e_real.py  test_serverless_journey.py  test_serverless_modes_comparison.py  test_serverless_modes_journey.py  test_snapshot_lifecycle.py  test_spot_cli.py  test_spot_mode_real.py  (+1 more)
cli/utils/: api_client.py  ssh_client.py  token_manager.py
config/: cost_optimizer_config.json
docker/: cost-optimizer.service
docs/: MELHORIAS_E_ROADMAP.md  PLANO_IMPLEMENTACAO_PRIORIDADES.md  SERVERLESS_LATENCY.md
migrations/: 001_add_failover_metrics.sql
scripts/: bench_s5cmd.sh  benchmark_compression.py  check_gcloud_backup.py  cleanup_test_instances.py  create_speed_test_machine.py  dumont-pack.py  dumont-restore.py  install_code_server.sh  realtime_sync.sh  run_gpu_tests.sh  run_tests.sh  seed_pricing.py  setup_realtime_sync.sh  simulate_failover.py  test_b2_restore_only.py  test_b2_storage.py  test_decompress_parallel.py  test_final_b2.py  test_final_bitshuffle.py  test_llama7b_compression.py  test_multi_provider_restore.py  test_restore_only.py  test_snapshot_optimized.py  test_snapshot_restore.py  test_snapshot_speed.py  vscode_failover.py
services/: cost_optimizer.py
spaces-renamer/: INSTALL.md  README.md
src/: main.py
tests/: CPU_STANDBY_BEFORE_AFTER_EXAMPLES.md  CPU_STANDBY_FAILOVER_CONVERSION_REPORT.md  README_E2E_TEST.md  README_PRODUCTION_TEST.md  actions-test.spec.js  ai-wizard.spec.js  auth.setup.js  comprehensive_navigation_test.py  conftest.py  debug_issues.py  detailed_system_analysis.py  efficiency-screenshot.spec.js  functional-test.spec.js  package-lock.json  package.json  playwright.config.js  run_backend_tests.py  run_backend_tests_fixed.py  site-review.spec.js  test_all_reports.spec.js  test_api.py  test_auth_fix.spec.js  test_auto_standby_e2e.spec.js  test_auto_standby_integration.py  test_backend_auth.py  test_backend_instances.py  test_browser_use.py  test_cpu_standby_backend.py  test_create_machine.py  test_debug_detailed.spec.js  test_debug_offers.spec.js  test_debug_token.spec.js  test_economia_ui.spec.js  test_end_to_end_failover.py  test_failover_comprehensive.py  test_final_check.spec.js  test_geolocation.py  (+18 more)
(+1613 files in other folders)
